# potoo

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  Makefile  Tiltfile  alembic.ini  docker-compose.yaml  pyproject.toml  readme.md  requirements.dev.txt  requirements.txt
airflow/dags/: add_promo_user.py  add_seed_user.py
chart/: Chart.yaml  readme.md  values.yaml
chart/templates/airflow/: postgres.pv.yaml
docker/: airflow.Dockerfile  msvc.Dockerfile
migrations/: env.py
potoo/: alembic.ini  config.py  containers.py  main.py
potoo/database/: engine.py  models.py
potoo/migrations/: env.py
src/potoo/: alembic.ini  app.py  config.py  containers.py  logger.py  logging.py  main.py
src/potoo/cli/: __init__.py  db.py  promo.py  seed.py
src/potoo/database/: __init__.py  engine.py  models.py  typing.py
src/potoo/migrations/: env.py
src/potoo/migrations/versions/: 0f20562c31e9_init_db_schema.py  2557074a6ddb_init_users.py  4418be0f2fd4_init_db_schema.py  4e1c2bda55be_changed_the_foreign_key.py  7e3625ed3513_init_promo_and_seed_tables.py  91ffafaac82b_init_users.py  a9ae904938d0_added_at_fields.py
src/potoo/repositories/: __init__.py  candidates.py  promo_users.py  promos.py  seed_users.py
src/potoo/services/: __init__.py  candidates.py  promos.py  twitter.py
src/twitter_growth/: app.py  containers.py  main.py
src/twitter_growth/database/: __init__.py  engine.py  models.py
