[tool.poetry]
name = "potoo"
version = "0.1.0"
description = ""
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
typer = "^0.6.1"
apache-airflow = "^2.4.1"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"
dependency-injector = "^4.40.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
mypy = "^0.982"
flake8 = "^5.0.4"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
